--- a/sneik/sneikTest/sneikTest.csproj
+++ b/sneik/sneikTest/sneikTest.csproj
@@ -17,6 +17,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Logic\Logic.csproj" />
     <ProjectReference Include="..\sneik\sneik.csproj" />
   </ItemGroup>
 
