--- a/sneik/Logic/Logic.csproj
+++ b/sneik/Logic/Logic.csproj
@@ -44,7 +44,7 @@
     <Compile Include="Models\Colors.cs" />
     <Compile Include="Models\Difficulty.cs" />
     <Compile Include="Models\Direction.cs" />
-    <Compile Include="Models\GameBoad.cs" />
+    <Compile Include="Models\GameBoard.cs" />
     <Compile Include="Models\Obstacle.cs" />
     <Compile Include="Models\Point.cs" />
     <Compile Include="Models\Size.cs" />
