--- a/sneik/Logic/Logic.csproj
+++ b/sneik/Logic/Logic.csproj
@@ -43,6 +43,7 @@
     <Compile Include="Models\Colors.cs" />
     <Compile Include="Models\Difficulty.cs" />
     <Compile Include="Models\Direction.cs" />
+    <Compile Include="Models\FoodPallet.cs" />
     <Compile Include="Models\SnakePart.cs" />
     <Compile Include="Models\SneikGame.cs" />
     <Compile Include="Models\GameBoard.cs" />
