Add CollisionDelegate for all ICollidables WIP: Refactor code to avoid using the same switch in every ICollidable

--- a/sneik/Logic/Logic.csproj
+++ b/sneik/Logic/Logic.csproj
@@ -43,6 +43,7 @@
     <Compile Include="Enums\Colors.cs" />
     <Compile Include="Enums\Difficulty.cs" />
     <Compile Include="Enums\Direction.cs" />
+    <Compile Include="Delegates\CollisionEventHandler.cs" />
     <Compile Include="Models\FoodPallet.cs" />
     <Compile Include="Models\SnakePart.cs" />
     <Compile Include="Models\SneikGame.cs" />
