--- a/sneik/Logic/Logic.csproj
+++ b/sneik/Logic/Logic.csproj
@@ -39,8 +39,10 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Factories\CollidableFactory.cs" />
     <Compile Include="Factories\UseCaseFactory.cs" />
     <Compile Include="Helpers\HighscoreReader.cs" />
+    <Compile Include="Interfaces\ICollidableFactory.cs" />
     <Compile Include="Interfaces\IHighscoreReader.cs" />
     <Compile Include="Interfaces\IUseCaseFactory.cs" />
     <Compile Include="Interfaces\ICollidable.cs" />
