Add delegate for InputHandler. Add logic for snake movement on key press

--- a/sneik/Logic/Logic.csproj
+++ b/sneik/Logic/Logic.csproj
@@ -39,6 +39,8 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Delegates\InputEventHandler.cs" />
+    <Compile Include="Enums\Keys.cs" />
     <Compile Include="Factories\UseCaseFactory.cs" />
     <Compile Include="Helpers\HighscoreReader.cs" />
     <Compile Include="Interfaces\IHighscoreReader.cs" />
